[project]
name = "weather-mcp"
version = "0.1.0"
description = "MCP servers for weather forecasts (USA via API, Israel via Playwright browser automation)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.2.0",
    "playwright>=1.49.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "truststore>=0.10.4",
]
